<resources>
    <string name="app_name">EE408FinalProject</string>
    <string name="settings">Edit Settings</string>
    <string name="data">Information</string>
    <string name="sensor">Monitoring System</string>
    <string name="graph">Graph</string>
    <string name="title_activity_sensor">Sensor</string>
    <string name="title_activity_data">data</string>
    <string name="title_activity_graph">graph</string>
    <string name="awgn">AWGN</string>
    <string name="rician_with_k">Rician with k:</string>
    <string name="channel">Channel:</string>
    <string name="n_variance">N-Variance:</string>
    <string name="v_variance">V-Variance:</string>
    <string name="power">Power:</string>
    <string name="sensor_name">Sensor:</string>
    <string name="observation">Observation:</string>
    <string name="theta">Theta:</string>
    <string name="alpha">Alpha:</string>
    <string name="optimum">Optimum</string>
    <string name="uniform">Uniform</string>
    <string name="title_activity_settings">Edit Settings</string>
</resources>
