<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="visual_environments.ee408finalproject.MainActivity"
    tools:showIn="@layout/activity_main">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="30sp"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/observation"
            android:id="@+id/tv_Obser"
            android:layout_alignBottom="@+id/et_Obser"
            android:layout_alignParentLeft="true"
            android:layout_alignParentTop="true"
             />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="text"
        android:ems="10"
        android:id="@+id/et_Obser"
        android:layout_toRightOf="@+id/tv_Obser"
        android:layout_alignParentTop="true"
        android:layout_alignParentRight="true"
         />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textSize="30sp"
            android:text="@string/theta"
            android:id="@+id/tv_Theta"
            android:layout_below="@+id/tv_Obser"
            android:layout_alignParentLeft="true"
            android:layout_alignBottom="@+id/et_Theta"
             />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        android:inputType="numberDecimal"
        android:ems="10"
        android:id="@+id/et_Theta"
        android:layout_toRightOf="@+id/tv_Theta"
        android:layout_below="@id/et_Obser"
        android:layout_alignParentRight="true"
        />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="30sp"

        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/sensor_name"
        android:id="@+id/tv_Sensor"
        android:layout_alignBottom="@+id/s_Sensor"
        android:layout_below="@+id/tv_Theta"
        android:layout_alignParentLeft="true"
        />

    <Spinner
        android:layout_width="wrap_content"
        android:layout_height="40dp"
        android:inputType="numberDecimal"
        android:ems="10"

        android:id="@+id/s_Sensor"
        android:layout_alignBottom="@+id/sensor"
        android:layout_toRightOf="@+id/tv_Sensor"
        android:layout_below="@id/et_Theta"
        android:layout_alignParentRight="true"
        />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="30sp"

        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/power"
        android:id="@+id/tv_Power"
        android:layout_alignBottom="@+id/et_Power"
        android:layout_below="@+id/tv_Sensor"
        android:layout_alignParentLeft="true"
        />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="numberDecimal"
        android:ems="10"
        android:id="@+id/et_Power"

        android:layout_toRightOf="@+id/tv_Power"
        android:layout_below="@id/tv_Sensor"
        android:layout_alignParentRight="true"
        />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="30sp"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/v_variance"
        android:id="@+id/tv_VVar"
        android:layout_alignBottom="@+id/et_VVar"
        android:layout_below="@+id/tv_Power"
        android:layout_alignParentLeft="true"
        />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="numberDecimal"
        android:ems="10"
        android:id="@+id/et_VVar"

        android:layout_toRightOf="@+id/tv_VVar"
        android:layout_below="@id/et_Power"
        android:layout_alignParentRight="true"
        />

    <TextView
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:textSize="30sp"
    android:textAppearance="?android:attr/textAppearanceMedium"
    android:text="@string/n_variance"
    android:id="@+id/tv_NVar"
    android:layout_alignBottom="@+id/et_NVar"
    android:layout_below="@+id/tv_VVar"
    android:layout_alignParentLeft="true"
    />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="numberDecimal"
        android:ems="10"
        android:id="@+id/et_NVar"

        android:layout_toRightOf="@+id/tv_NVar"
        android:layout_below="@id/et_VVar"
        android:layout_alignParentRight="true"
        />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="30sp"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/channel"
        android:id="@+id/tv_Channel"

        android:layout_below="@+id/tv_NVar"
        android:layout_alignParentLeft="true"
        />


    <RadioGroup xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:id="@+id/rg_Channel"
        android:layout_below="@+id/tv_Channel"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true">

        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="30sp"
            android:text="@string/awgn"
            android:checked="false"

            android:id="@+id/rb_AWGN"
            android:onClick="onRadioButtonClicked"/>

        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="30sp"
            android:id="@+id/rb_Rician"
            android:checked="true"
            android:text="@string/rician_with_k"
            android:onClick="onRadioButtonClicked"/>

    </RadioGroup>

    <EditText
        android:layout_width="139dp"
        android:layout_height="wrap_content"
        android:inputType="numberDecimal"
        android:ems="10"
        android:id="@+id/et_Rician"
        android:focusable="false"
        android:focusableInTouchMode="false"
        android:clickable="false"
        android:layout_gravity="right"

        android:layout_toRightOf="@+id/rg_Channel"
        android:layout_marginTop="33dp"

        android:layout_alignBottom="@+id/rg_Channel"
        android:layout_alignParentRight="true"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="30sp"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/alpha"
        android:id="@+id/tv_Alpha"

        android:layout_below="@+id/rg_Channel"
        android:layout_alignParentLeft="true"
        />


    <RadioGroup xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:id="@+id/rg_Alpha"
        android:layout_below="@+id/tv_Alpha"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true">

        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="30sp"
            android:text="@string/optimum"
            android:checked="true"

            android:layout_marginRight="10dp"
            android:id="@+id/rb_Optimum"
            />

        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"

            android:enabled="false"
            android:textSize="30sp"
            android:id="@+id/rb_Uniform"

            android:text="@string/uniform"
            />

    </RadioGroup>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="50dp"
        android:text="Simulate"
        android:id="@+id/btn_simulate"
        android:onClick="onSimClick"
        android:layout_alignParentLeft="true"
        android:layout_marginLeft="50dp"
        android:layout_alignParentBottom="true" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="50dp"
        android:text="Default"
        android:id="@+id/btn_default"
        android:onClick="onDefaultClick"
        android:layout_alignParentRight="true"
        android:layout_marginRight="50dp"
        android:layout_alignParentBottom="true" />


</RelativeLayout>
